Elemento css implementados e js funcional

--- a/index.css
+++ b/index.css
@@ -11,10 +11,12 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    color: white;
 }
 
 header {
     padding: 1em;
+    font-size: 1.3rem;
 }
 
 .logo {
@@ -27,13 +29,14 @@ header {
 }
 
 .imglogo {
-    width: 50px;
+    width: 3em;
 }
 
 main {
+    min-height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
 }
 
 .initial {
@@ -42,6 +45,7 @@ main {
     align-items: center;
     justify-content: center;
     color: white;
+    gap: 5px;
 }
 
 .foguete {
@@ -50,6 +54,62 @@ main {
     transition: 0.2s;
 }
 
-.foguete:hover{
+.foguete:hover {
     transform: scale(1.2);
 }
+
+.info{
+    width: 80%;
+    text-align: center;
+    font-size: 1.2rem;
+}
+
+.showup {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.user{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.btns{
+    display: flex;
+    gap: 20px;
+}
+
+.button {
+    padding: 0.5em;
+    font-size: 1rem;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    color: #313133;
+    background: #4FD1C5;
+  background: linear-gradient(90deg, rgba(129,230,217,1) 0%, rgba(79,209,197,1) 100%);
+    border: none;
+    border-radius: 1000px;
+    box-shadow: 12px 12px 24px rgba(79,209,197,.64);
+    transition: all 0.3s ease-in-out 0s;
+    cursor: pointer;
+    outline: none;
+    position: relative;    
+    }
+
+  .button:hover {    
+    transform: translateY(-6px);
+  }   
+
+.output{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+  .apodImg{
+      width: 20%;
+  }
