--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
 
 body {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-image: url(media/bg.gif);
     background-position: center;
     background-repeat: no-repeat;
@@ -15,6 +15,7 @@ body {
 
 header {
     font-size: 1.3rem;
+    text-align: center;
 }
 
 .logo {
